--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">UnitCalc</string>
-    <string name="version">Select Version</string>
+    <string name="select_version">Select Version</string>
+    <string name="ana_version0">Axis and Allies 1942 Second Edition</string>
+    <string name="ana_version1">Axis and Allies 1941</string>
+    <string name="ana_version2">Axis and Allies 1940 Pacific/Europe Second Edition</string>
+    <string name="ana_version3">Axis and Allies 1942 Spring</string>
+    <string name="ana_version4">Axis and Allies Anniversary Edition</string>
+    <string name="ana_version5">Axis and Allies 1940 Pacific/Europe</string>
 </resources>
