functionality of changing version works. But i have to set the functionality of reset all when the dialog box closes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
-    <string name="app_name">UnitCalc</string>
+    <string name="app_name">A\u0026A UnitCalc</string>
     <string name="select_version">Select Version</string>
-    <string name="ana_version0">Axis and Allies 1942 Second Edition</string>
-    <string name="ana_version1">Axis and Allies 1941</string>
-    <string name="ana_version2">Axis and Allies 1940 Pacific/Europe Second Edition</string>
-    <string name="ana_version3">Axis and Allies 1942 Spring</string>
-    <string name="ana_version4">Axis and Allies Anniversary Edition</string>
-    <string name="ana_version5">Axis and Allies 1940 Pacific/Europe</string>
+    <string name="ana_version0">A\u0026A 1942 Second Edition</string>
+    <string name="ana_version1">A\u0026A 1941</string>
+    <string name="ana_version2">A\u0026A 1940 Pacific/Europe Second Edition</string>
+    <string name="ana_version3">A\u0026A 1942 Spring</string>
+    <string name="ana_version4">A\u0026A Anniversary Edition</string>
+    <string name="ana_version5">A\u0026A 1940 Pacific/Europe</string>
+    <string name="set">Set</string>
+    <string name="cancel">Cancel</string>
 </resources>
