added images and updated versions and added the readme to the action bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="select_axis_and_allies_version">Select Axis and Allies Version</string>
     <string name="set">Set</string>
     <string name="cancel">Cancel</string>
+    <string name="read_me">Read me</string>
 </resources>
 
 <!--
